--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.Driver=com.mysql.jdbc.Driver
-jdbc.Url=jdbc:mysql://localhost:3306/house_manager_v2?useUnicode=true&characterEncoding=utf8
+jdbc.Url=jdbc:mysql://134.175.69.74:3306/house_manager_v2?useUnicode=true&characterEncoding=utf8
 jdbc.Username=root
 jdbc.Password=123456
